# RepoHCL

./: .dockerignore  .env  .gitignore  README.md  chat_engine.py  doc.py  file_handler.py  file_helper.py  llm_helper.py  log.py  main.py  main2.py  project_manager.py  prompt.md  prompt.py  requirements.txt  service.py  settings.py
Vanguard-V2-StaticChecker/: .dockerignore  .gitignore  CMakeLists.txt  README.md
Vanguard-V2-StaticChecker/benchmark/: README.md  genastcmd.py
Vanguard-V2-StaticChecker/docker/: base.dockerfile  dockerfile.cg  dockerfile.cg_libxml2  dockerfile.cg_md5  dockerfile.cg_pugixml  dockerfile.cg_tinyxml2  dockerfile.cg_vanguard  libxml2.dockerfile  md5.dockerfile  run.sh  vanguard.dockerfile  zlib.dockerfile
Vanguard-V2-StaticChecker/include/CFG/: CFG.h  InterProcedureCFG.h  README.md  SACFG.h
Vanguard-V2-StaticChecker/include/framework/: ASTElement.h  ASTManager.h  CallGraph.h  Common.h  Config.h  Report.h  VariableAnalyzer.h
Vanguard-V2-StaticChecker/lib/: CMakeLists.txt
Vanguard-V2-StaticChecker/tools/: CMakeLists.txt
Vanguard-V2-StaticChecker/tools/CallGraphGen/: CMakeLists.txt  gen.cpp
docker/: cmd.dockerfile  dockerfile.cg_python  dockerfile.cg_service  service.dockerfile
metrics/: __init__.py  api.py  clazz.py  doc.py  function.py  function_v2.py  metric.py  module.py  module_v2.py  parser.py  py_parser.py  repo.py  repo_rag.py  repo_v2.py  structure.py
utils/: __init__.py  ast_generator.py  common.py  file_helper.py  llm_helper.py  multi_task_dispatch.py  rag_helper.py  settings.py  strings.py
(+11 files in other folders)
